--- a/docs/alkiln/setup.mdx
+++ b/docs/alkiln/setup.mdx
@@ -11,6 +11,8 @@ import { GTOYS, AutoDIY, KittyLitter } from './components/\_test_types.js';
 WIP (Work in progress)
 :::
 
+<!-- Docs, docs, the magical task - the more you write, the more they lack -->
+
 <!-- TODO: Add a GitHub admins section -->
 <!-- TODO: Add links to changing workflow files -->
 <!-- TODO: Add full instructions to manually create GitHub files and set secrets for the GitHub methods? I think the setup interview should do that. -->
